--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
+                    <h1 class="mx-auto my-0 text-uppercase">Memory Postmortem</h1>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">A diary of personal experiences with platform postmortem experiences, exploring how social media sites mediate experiences of death and grief.</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
                 </div>
             </div>
