--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about"></a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects"></a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup"></a></li>
                     </ul>
@@ -39,7 +39,7 @@
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Memory Postmortem</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">A diary of personal experiences with platformed postmortem experiences, exploring how social media sites mediate experiences of death and grief.</h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
+                    <a class="btn btn-primary js-scroll-trigger" href="#about">Explore</a>
                 </div>
             </div>
         </header>
