--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Memory Postmortem</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">A diary of personal experiences with platformed postmortem experiences, exploring how social media sites mediate experiences of death and grief.</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">A diary exploring how social media sites mediate experiences of death and grief.</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">Explore</a>
                 </div>
             </div>
