adding project text

--- a/index.html
+++ b/index.html
@@ -43,22 +43,34 @@
                 </div>
             </div>
         </header>
-        <!-- About-->
+        <!-- Platformed Experiences -->
         <section class="about-section text-center" id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
+                        <h2 class="text-white mb-4">Platformed Experiences</h2>
                         <p class="text-white-50">
-                            Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page</a>
-                            . The theme is open source, and you can use it for any purpose, personal or commercial.
+                            Over the years, social media platforms, like Facebook, have begun to take up space in everyday life. Though some people  avoid these impacts more than others, almost everyone is implicated at some point into the circulation of social media, and it affects lives. 
+
+                            Some scholars suggest that not interacting with social media is essentially impossible, and is intrinsically existential, presenting a complex place for the user to abide (Boyd 2010, van Dijck 2013, Lagerkvist 2017)
+
+
+As social media has become more of a public space, social practices have made their way onto the platform, and as such, contribute to memory formation and remembrance. 
+
+
+This brings with it nuanced interaction and complexities due to this platformed space of multimedia interaction. 
+
+
+There are even memorial platforms, independent of well-known social media platforms that serve to memorialize individuals. 
+
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <img class="img-fluid" src="/assets/img/bg-masthead.jpg" alt="..." />
             </div>
         </section>
+
+        
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container">
