--- a/index.html
+++ b/index.html
@@ -50,20 +50,16 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Platformed Experiences</h2>
                         <p class="text-white-50">
-                            Over the years, social media platforms, like Facebook, have begun to take up space in everyday life. Though some people  avoid these impacts more than others, almost everyone is implicated at some point into the circulation of social media, and it affects lives. 
-
-                            Some scholars suggest that not interacting with social media is essentially impossible, and is intrinsically existential, presenting a complex place for the user to abide (Boyd 2010, van Dijck 2013, Lagerkvist 2017)
-
-
-As social media has become more of a public space, social practices have made their way onto the platform, and as such, contribute to memory formation and remembrance. 
-
-
-This brings with it nuanced interaction and complexities due to this platformed space of multimedia interaction. 
-
-
-There are even memorial platforms, independent of well-known social media platforms that serve to memorialize individuals. 
+                            Over the years, social media platforms, like Facebook, have begun to take up space in everyday life. Though some people  avoid these impacts more than others, almost everyone is implicated at some point into the circulation of social media, and it affects lives. Some scholars suggest that not interacting with social media is essentially impossible, and is intrinsically existential, presenting a complex place for the user to abide (Boyd 2010, van Dijck 2013, Lagerkvist 2017)
 
                         </p>
+                        As social media has become more of a public space, social practices have made their way onto the platform, and as such, contribute to memory formation and remembrance. This brings with it nuanced interaction and complexities due to this platformed space of multimedia interaction.
+                        <p class="text-white-50">
+                        </p>
+                         <p class="text-white-50">
+
+                        There are even memorial platforms, independent of well-known social media platforms that serve to memorialize individuals. 
+                    </p>
                     </div>
                 </div>
                 <img class="img-fluid" src="/assets/img/bg-masthead.jpg" alt="..." />
