--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
 
                         </p>
             
-                        <p class="text-white-50">
-
-                            As social media has become more of a public space, social practices have made their way onto the platform, and as such, contribute to memory formation and remembrance. This brings with it nuanced interaction and complexities due to this platformed space of multimedia interaction.
+                        <p class="text-white-50"> As social media has become more of a public space, social practices have made their way onto the platform, and as such, contribute to memory formation and remembrance. This brings with it nuanced interaction and complexities due to this platformed space of multimedia interaction.
                         </p>
                          <p class="text-white-50">
 
