--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <p class="text-black-50 mb-0">With a quick google search of my grandmother’s name, I can find <a href="https://www.dignitymemorial.com/obituaries/memphis-tn/vivian-reynolds-vickrey-6638132"> her obituary memorial page.</a>
+                            </p>
                         </div>
                     </div>
                 </div>
