add image and text

--- a/index.html
+++ b/index.html
@@ -86,7 +86,18 @@
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4></h4>
-                            <p class="text-black-50 mb-0">WWith another search I can find <a href="https://www.legacy.com/obituaries/name/cb-vickrey-obituary?pid=162635098">a similar page</a> on a different memorial site for my grandfather. <a href="https://www.dignitymemorial.com/obituaries/memphis-tn/vivian-reynolds-vickrey-6638132"></a>
+                            <p class="text-black-50 mb-0">With another search I can find <a href="https://www.legacy.com/obituaries/name/cb-vickrey-obituary?pid=162635098">a similar page</a> on a different memorial site for my grandfather. <a href="https://www.dignitymemorial.com/obituaries/memphis-tn/vivian-reynolds-vickrey-6638132"></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/jordan1.png" alt="..." /></div>
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="featured-text text-center text-lg-left">
+                            <h4></h4>
+                            <p class="text-black-50 mb-0">And finally,<a href="https://www.legacy.com/obituaries/dfw/obituary.aspx?n=jordan-raye-radcliff&pid=175999920">my sister’s</a>
                             </p>
                         </div>
                     </div>
