--- a/index.html
+++ b/index.html
@@ -102,6 +102,30 @@
                         </div>
                     </div>
                 </div>
+
+
+                <section class="about-section text-center" id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-white mb-4">Platformed Spaces + Archives</h2>
+                        <p class="text-white-50">
+                            Sometimes I like knowing I can locate these pieces of information, these pseudo-archival artificacts. I can access images that I don’t even own, that were uploaded by other family members when the sites were created. 
+
+                        </p>
+            
+                        <p class="text-white-50"> But sometimes I feel like I don’t want others to have access to all of this personal, private information. With platforms, comes a blurring of boundaries between private and public. 
+                        </p>
+                         <p class="text-white-50">
+
+                        This is also the case with traditional archives, when creatorship is complex, and many creators may not even know or have consented to their materials being included. 
+
+                    </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
