--- a/index.html
+++ b/index.html
@@ -103,6 +103,18 @@
                     </div>
                 </div>
 
+                <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/jordan1.png" alt="..." /></div>
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="featured-text text-center text-lg-left">
+                            <h4></h4>
+                            <p class="text-black-50 mb-0">
+                                These online memorial pages allow for certain interactions, like donating in the lost loved one's name, or adding an entry to the guest book in a loved's ones honor.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
 
                 <section class="about-section text-center" id="about">
             <div class="container">
