--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Platformed Spaces + Archives</h2>
                         <p class="text-white-50">
-                            Sometimes I like knowing I can locate these pieces of information, these pseudo-archival artificacts. I can access images that I don’t even own, that were uploaded by other family members when the sites were created. 
+                            Sometimes I like knowing I can locate these pieces of information, these pseudo-archival artifiacts. I can access images that I don’t even own, that were uploaded by other family members when the sites were created. 
 
                         </p>
             
