--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/jordan1.png" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4></h4>
