--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7"></div>
                     <div class="col-xl-4 col-lg-5">
-                        <div class="featured-text text-center text-lg-left">
+                        <div class="featured-text text-center">
                             <h4></h4>
                             <p class="text-black-50 mb-0">
                                 These online memorial pages allow for certain interactions, like donating in the lost loved one's name, or adding an entry to the guest book in a loved's ones honor.
