--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
                 </div>
 
-                <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                <div class="container">
                     <div class="col-xl-8 col-lg-7"></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center">
