--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
                     </div>
                 </div>
 
+                <section class="about-section text-center" id="about">
+
                 <div class="container">
                         <div class="featured-text text-center">
                             <h4></h4>
@@ -112,6 +114,7 @@
                         </div>
                     </div>
                 </div>
+            </section>
 
 
                 <section class="about-section text-center" id="about">
@@ -134,6 +137,7 @@
                     </div>
                 </div>
             </div>
+        </section>
         </section>
 
                 <!-- Project One Row-->
