--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                 <section class="about-section text-center" id="about">
 
                 <div class="container">
-                        <div class="featured-text text-center">
+                    <div class="row">
+                    <div class="col-lg-8 mx-auto">
                             <h4></h4>
                             <p class="text-black-50 mb-0">
                                 These online memorial pages allow for certain interactions, like donating in the lost loved one's name, or adding an entry to the guest book in a loved's ones honor.
