--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
                             <h4></h4>
                             <p class="text-black-50 mb-0">And finally, <a href="https://www.legacy.com/obituaries/dfw/obituary.aspx?n=jordan-raye-radcliff&pid=175999920">my sister’s</a>
                             </p>
+
+                            <div><p>These online memorial pages allow for certain interactions, like donating in the lost loved one's name, or adding an entry to the guest book in a loved's ones honor.</p></div>
                         </div>
                     </div>
                 </div>
