--- a/index.html
+++ b/index.html
@@ -99,10 +99,17 @@
                             <h4></h4>
                             <p class="text-black-50 mb-0">And finally, <a href="https://www.legacy.com/obituaries/dfw/obituary.aspx?n=jordan-raye-radcliff&pid=175999920">my sister’s</a>
                             </p>
+                        </div>
+                    </div>
+                </div>
 
-                            <div class="row align-items-center mb-4 mb-lg-5">
-                                <p>These online memorial pages allow for certain interactions, like donating in the lost loved one's name, or adding an entry to the guest book in a loved's ones honor.
-                                </p></div>
+                <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                    <div class="col-xl-8 col-lg-7"></div>
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="featured-text text-center text-lg-left">
+                            <h4></h4>
+                            <p class="text-black-50 mb-0">These online memorial pages allow for certain interactions, like donating in the lost loved one's name, or adding an entry to the guest book in a loved's ones honor.
+                            </p>
                         </div>
                     </div>
                 </div>
