--- a/index.html
+++ b/index.html
@@ -114,6 +114,21 @@
                     </div>
                 </div>
 
+                <section class="about-section text-center" id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-white mb-4">Memorial Platforms + Social Media</h2>
+                        <p class="text-white-50">
+                            These online memorial pages allow for certain interactions, like donating in the lost loved one's name, or adding an entry to the guest book in a loved's ones honor.
+
+                        </p>
+                    
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
                 <section class="about-section text-center" id="about">
             <div class="container">
@@ -135,7 +150,6 @@
                     </div>
                 </div>
             </div>
-        </section>
         </section>
 
                 <!-- Project One Row-->
