--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                         <h2 class="text-white mb-4">Memorial Platforms + Social Media</h2>
                         <p class="text-white-50">
                             These online memorial pages allow for certain interactions, like donating in the lost loved one's name, or adding an entry to the guest book in a loved's ones honor.
+                        <hr class="d-none d-lg-block mb-0 mr-0" />
 
                         </p>
                     
