--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Memorial Platforms + Social Media</h2>
                         <p class="text-white-50">
-                            These online memorial pages allow for certain interactions, like donating in the lost loved one's name, or adding an entry to the guest book in a loved's ones honor.
+                            Online memorial pages like the ones above allow for certain interactions, like donating in the lost loved one's name, or adding an entry to the guest book in a loved's ones honor. These platform features build a particular infrastructure that supports a certain kind of interaction, much like more recognizable social media platforms, like Facebook.
                         </p>
+                        <br>
+                        <p class="text-white-50">This represents a restructuring and blending of real-life, reality based—and even religious based—mourning and memory practices with online practices, something that van Dijck (2013) suggests happens generally with the emergence of social networking sites. Online places of memorialization are attempting to mimic some practices of reality, but in effect, are influencing and even changing practices around death on a digital platform infrastructure.</p>
                     
                     </div>
                 </div>
