--- a/index.html
+++ b/index.html
@@ -123,6 +123,29 @@
         </section>
 
         <br>
+
+        <section class="about-section text-center" id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-white mb-4"></h2>
+                        <p class="text-white-50">
+                            In my own life, I've experienced the way it feels to encounter these materials circulating on Facebook, that bring with them nuanced emotions and affective experiences. 
+                        </p>
+                        <br>
+                        <p class="text-white-50">When my sister passed away in 2015, almost as soon as I learned what had happened, Facebook notifications were pouring in. I was being tagged in posts, images, videos, and in addition people were posting condolences on my sister's Facebook feed.</p>
+
+                        <br>
+                        <p class="text-white-50">I remember having a range of feelings about this experience, from not caring at all, to wanting to tell people not to post anything because Jordan was MY sister, not their sister, to feeling joy to see pictures or videos I hadn't seen in years. This presented a very nuanced navigation for me, and many friends and family members.</p>
+
+                        <p class="text-white-50">Even today, 5 years later, my mom still experiences a lot of pain when she is alerted of Facebook memories of my sister.</p>
+                    
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <br>
 
 
