--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <p class="text-white-50">When my sister passed away in 2015, almost as soon as I learned what had happened, Facebook notifications were pouring in. I was being tagged in posts, images, videos, and in addition people were posting condolences on my sister's Facebook feed.</p>
 
                         <br>
-                        <p class="text-white-50">I remember having a range of feelings about this experience, from not caring at all, to wanting to tell people not to post anything because Jordan was MY sister, not their sister, to feeling joy to see pictures or videos I hadn't seen in years. This presented a very nuanced navigation for me, and many friends and family members.</p>
+                        <p class="text-white-50">I remember having a range of feelings about this experience, from not caring at all, to wanting to tell people not to post anything because Jordan was MY sister, not their sister, to feeling joy at seeing pictures or videos I hadn't seen in years. This presented a very nuanced navigation for me, and many friends and family members.</p>
 
                         <p class="text-white-50">Even today, 5 years later, my mom still experiences a lot of pain when she is alerted of Facebook memories of my sister.</p>
                     
@@ -260,6 +260,9 @@
                     <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
                 </div>
             </div>
+
+       
+
         </section>
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright &copy; Your Website 2021</div></footer>
