--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-white mb-4">Facebook as Complex Mediated Memory</h2>
+                        <h2 class="text-white mb-4">Facebook as Complex Mediated Memory with Platform Power</h2>
                         <p class="text-white-50">
                             Memorialization**
 
@@ -170,7 +170,10 @@
 
                         Tributes Feature**
 
-                        Facebook promoting features in order to keep people on the platform. A kind of sneaky, kind of nasty rhetoric here. At the same time, sometimes it is nice to have this though - complex feelings
+                        Facebook promoting features in order to keep people on the platform. A kind of sneaky, kind of nasty rhetoric of commodification here. Grief/loss = reason to post and keeps users on FB, generates content and supports facebook as capitalist platform. This is a platform power that facebook has. (cite**
+
+
+                       At the same time, sometimes it is nice to have this though and can sometimes be cathartic - complex feelings
 
                     </p>
                     </div>
