--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
 
                         This is also the case with traditional archives, when creatorship is complex, and many creators may not even know or have consented to their materials being included. 
 
+                        **right to be deleted/forgotten and platform/profile ownership
+
                     </p>
 
                     <p class="text-white-50">
