--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                         Aligning platforms and archives allows for questioning the boundaries between of the archive. Archives collect materials, and hold a particular power that shapes cultural memory. In a related way, platforms also have a power to build features that commodify usage. As such, images, text, videos, and other artificants are collected and made viewable, and contribute to memory. 
 
 
+
                     </p>
                     </div>
                 </div>
@@ -245,6 +246,13 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Memory and "Archival" Influence</h2>
                         <p class="text-white-50">
+
+
+                            ***What counts as an archive? How do platforms and mediation of memory influence the "archive"? 
+
+                            **What can aligning archives with platforms reveal about archives as places of mediation? 
+
+
                             **how social media complicates the archive 
 
                             ** examples of the actual challenges of archiving social media (*maybe cite Hemphill?)
