--- a/index.html
+++ b/index.html
@@ -239,6 +239,36 @@
         </section>
 
         <br>
+         <section class="about-section text-center" id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-white mb-4">"Grief Work" in Platforms and Archives</h2>
+                        <p class="text-white-50">
+
+
+                              “Grief work” is a term coined by  Douglas, Alisausjas, and Mordell (2019) in reference to archival work. The authors call for a lens of "grief work" as a way to transform the way archival work is performed and understood. Douglas references her own research in online grief communities, where she argues that grieving parents in online communities construct personal archives for their lost children in a way that shapes and creates a particular memory and perception of their lost child (Douglas, Alisausjas, and Mordell, 2019). The authors add that online communities also provide a way to construct an online afterlife with the lost loved one, forming an ongoing relationship and continuing the bond with their lost loved one (Douglas, Alisausjas, and Mordell, 2019). 
+
+                        </p>
+            
+                        <p class="text-white-50"> 
+
+                            **perhaps share memory discovery on Facebook -- things posted about my sister from people I didn't know, or memories that aren't mine per say? Basically the affect of others. 
+
+
+
+                        </p>
+                         <p class="text-white-50">
+
+                        **
+
+                    </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <br>
 
          <section class="about-section text-center" id="about">
             <div class="container">
