--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
                         <p class="text-white-50">
                             **video(s) from childhood posted by friends
 
+
+                            <iframe id="video" width="560" height="315" src="assets/img/flower.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+
                         </p>
             
                         <p class="text-white-50"> **
