--- a/index.html
+++ b/index.html
@@ -189,7 +189,9 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Artifact Discovery</h2>
                         <p class="text-white-50">
-                            **video(s) from childhood posted by friends
+                            I decided it might be interesting to experiment with curating/collecting my own artifiact discovery from social media sites, related to my sister, that were posted by people around and after her death. 
+
+                            
 
 
                             <iframe id="video" width="560" height="315" src="assets/img/flower.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
