--- a/index.html
+++ b/index.html
@@ -191,10 +191,16 @@
                         <p class="text-white-50">
                             I decided it might be interesting to experiment with curating/collecting my own artifiact discovery from social media sites, related to my sister, that were posted by people around and after her death. 
 
-                            
+                            <br>
 
 
-                            <iframe id="video" width="560" height="315" src="assets/img/flower.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                            <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/videopost.png" alt="..." /></div>
+
+                    <br> 
+                    <iframe id="video" width="560" height="315" src="assets/img/flower.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+
+
 
                         </p>
             
