--- a/index.html
+++ b/index.html
@@ -176,6 +176,18 @@
                        At the same time, sometimes it is nice to have this though and can sometimes be cathartic - complex feelings
 
                     </p>
+
+                    <br>
+
+                    <p class="text-white-50">
+
+                        Facebook's power as a  platform also comes through it's nature as a commodifed platform of surveillance, that profits and benefits from usage, interaction, and capturing of personal data. 
+
+                        * recent legisltation from Apple that protects users/consumers *
+
+
+
+                    </p>
                     </div>
                 </div>
             </div>
@@ -247,7 +259,7 @@
 
                     <p class="text-white-50">
 
-                        Aligning platforms and archives allows for questioning the boundaries between of the archive. Archives collect materials, and hold a particular power that shapes cultural memory. In a related way, platforms also have a power to build features that commodify usage. As such, images, text, videos, and other artificants are collected and made viewable, and contribute to memory. 
+                        Aligning platforms and archives allows for questioning the boundaries between of the archive. Archives collect materials, and hold a particular power that shapes cultural memory. In a related way, platforms also have a power to build features that commodify usage. As such, images, text, videos, and other artificants are collected and made viewable, and contribute to memory.
 
 
 
