--- a/index.html
+++ b/index.html
@@ -154,6 +154,19 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Facebook as Complex Mediated Memory with Platform Power</h2>
                         <p class="text-white-50">
+                            
+                        Beginning in 2011, Facebook began offering the feature of Memorialization where, after a user has died and the death is confirmed (usually with an obituary verification sent to Facebook by a surviving family member or friend), the account of the deceased user will become “memorialized,” or converted into a flattened, simplified page that only allows one-way communication and can no longer be logged into. 
+
+                        <br>
+
+                        This seemed like a good idea to maintain archival provenance and agency within the account, but, when it was first offered, the feature caused trusted family to lose access to any control of the account (Acker and Brubaker 2014). 
+
+                        <br>
+
+                        In response, in 2015, Facebook released the capability of adding a “legacy contact,” which  allows users to choose another Facebook user to manage their account upon death. This means that even after the profile of a dead user is memorialized, there’s still someone who can log in, control posts, delete posts, and generally manage the account. 
+
+
+
                             Memorialization**
 
                             Original facebook memorialization 
@@ -346,6 +359,10 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">References</h2>
+
+                        <p class="text-white-50">
+                        Acker, Amelia, and Jed R. Brubaker. (2014) Death, Memorialization, and Social Media: A Platform Perspective for Personal Archives. p. 23. Retrieved from: https://archivaria.ca/archivar/index.php/archivaria/article/viewFile/13469/14791
+                        </p>
 
                         <p class="text-white-50">Boyd, d. (2010). “Social network sites as networked publics.” In Papacharissi, Z. (Ed.), A
                             networked self: Identity, community, and culture on social network sites. Retrieved from
