--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
 
                     <div><img class="img-fluid mb-3 mb-lg-0" src="assets/img/tributes1.png" alt="..." /></div>
 
+                    <br>
+
+                    <div><img class="img-fluid mb-3 mb-lg-0" src="assets/img/tributes2.png" alt="..." /></div>
+
+                    <br>
+
                        
                         <p class="text-white-50">
 
