--- a/index.html
+++ b/index.html
@@ -193,6 +193,14 @@
 
                     <br>
 
+                    <p class="text-white-50">
+
+                    The introduction of the press release says: 
+
+                    "People turn to Facebook to find community during life’s highs and lows. We know the loss of a friend or family member can be devastating — and we want Facebook to be a place where people can support each other while honoring the memory of their loved ones."
+
+                </p>
+
                        
                         <p class="text-white-50">
 
