--- a/index.html
+++ b/index.html
@@ -299,6 +299,18 @@
 
 
                     </p>
+
+                    <br>
+
+                    <p>
+                        <p class="text-white-50">
+
+                        Connecting archives and platform affordances to cultural heritage, like Mukurtu
+
+
+
+                    </p>
+                    </p>
                     </div>
                 </div>
             </div>
