--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
                         Facebook's power as a  platform also comes through it's nature as a commodifed platform of surveillance, that profits and benefits from usage, interaction, and capturing of personal data. 
 
-                        * recent legisltation from Apple that protects users/consumers *
+                        A recent update in Apple's iOS 14 now requires users to opt in to Facebook's capturing of personal data that is sold to advertisers to create personalized ads for users. In response, Facebook campaigned to users that because of ads, Facebook is free, admonishing users for not opting-in to personalized ads. The same happened on Facebbo-owned Instagram. This recent example reveals the control and power a platform has, even with measures are put in place to limit their control. 
 
 
 
@@ -410,6 +410,11 @@
                         <p class="text-white-50">
                             van Dijck, J. (2013). (Ed.), The Culture of Connectivity: A Critical History of Social
                             Media. Oxford University Press, Retrieved 8 Apr. 2019, from http://www.oxfordscholarship.com.ezproxy.lib.utexas.edu/view/10.1093/acprof:oso/ 9780199970773.001.0001/acprof-9780199970773.
+                        </p>
+                        <br>
+
+                         <p class="text-white-50">
+                            https://www.wired.com/story/facebook-ad-tracking-pressure-ios-14-5/
                         </p>
                         <br>
                         
