adding new images and text

--- a/index.html
+++ b/index.html
@@ -254,6 +254,25 @@
                     <br>
                     <iframe id="video" width="560" height="315" src="assets/img/flower.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
 <br>
+             <p class="text-white-50">
+                            I had never seen this particular video, so it was actually a memory I was really grateful to be reminded of through this video. I remember laughing and recalling how nervous my sister and I were walking down the aisle. 
+                                
+
+                            </p>
+
+
+                            <br>
+             <p class="text-white-50">
+                             In the hours, days, and weeks after my sister's death, people who knew her were posting and sharing images. Looking back, it's really heartwarming to see this interaction, but in the moment, some of these posts brought on complex feelings. Some posts allowed me in an unexpected way to discover a side of my sister that I wasn't as aware of. My sister had a chronic illness, Gastroparesis, and a bone tumor. Through her own initiative, she had connected with people around the world via social media, mostly Instagram and Facebook, and really formed a community, that I didn't understand the breadth of until her death. 
+
+
+                             <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/jordan2.png" alt="..." /></div>
+
+                                
+
+                            </p>
+
 
 
                         </p>
