--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                              The post below was posted by a friend of my sister's I didn't know. Reading this now, I feel a lot of care and gratitude for my sister's friends in the chronic illness community who knew what she was going through. I feel so much respect for the level of support the friend describes in the post below, and realize how much this community meant to my sister and how much she meant to them. 
 
 
-                             <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                             <div>
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/jordan2.png" alt="..." /></div>
 
                                 
@@ -285,7 +285,7 @@
                         </p>
                          <p class="text-white-50">
 
-                        **other posts and complex/nuanced feelings + mediated memory
+                        other posts and complex/nuanced feelings + mediated memory
 
                     </p>
                     </div>
