--- a/index.html
+++ b/index.html
@@ -263,11 +263,14 @@
 
                             <br>
              <p class="text-white-50">
-                             In the hours, days, and weeks after my sister's death, people who knew her were posting and sharing images. Looking back, it's really heartwarming to see this interaction, but in the moment, some of these posts brought on complex feelings. Some posts allowed me in an unexpected way to discover a side of my sister that I wasn't as aware of. My sister had a chronic illness, Gastroparesis, and a bone tumor. Through her own initiative, she had connected with people around the world via social media, mostly Instagram and Facebook, and really formed a community, that I didn't understand the breadth of until her death. 
+                             In the hours, days, and weeks after my sister's death, people who knew her were posting and sharing images. Looking back, it's really heartwarming to see this interaction, but in the moment, some of these posts brought on complex feelings. Some posts allowed me in an unexpected way to discover a side of my sister that I wasn't as aware of. My sister had a chronic illness, Gastroparesis, and a bone tumor. Through her own initiative, she had connected with people around the world via social media, mostly Instagram and Facebook, and really formed a community, that I didn't understand the breadth of until her death. <p/>
 
                              <br>
 
+                        <p>
                              The post below was posted by a friend of my sister's I didn't know. Reading this now, I feel a lot of care and gratitude for my sister's friends in the chronic illness community who knew what she was going through. I feel so much respect for the level of support the friend describes in the post below, and realize how much this community meant to my sister and how much she meant to them. 
+
+                             </p>
 
 
                              <div>
