--- a/index.html
+++ b/index.html
@@ -272,9 +272,7 @@
 
                              </p>
 
-
-                             <div>
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/jordan2.png" alt="..." /></div>
+                             <img class="center" src="assets/img/jordan2.png" alt="..." />
 
                                 
 
