--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <br> 
                     <br>
                     <iframe id="video" width="560" height="315" src="assets/img/flower.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-<br>
+                    <br>
              <p class="text-white-50">
                             I had never seen this particular video, so it was actually a memory I was really grateful to be reminded of through this video. I remember laughing and recalling how nervous my sister and I were walking down the aisle. 
                                 
@@ -272,7 +272,7 @@
 
                              </p>
 
-                             <img class="center" src="assets/img/jordan2.png" alt="..." />
+                             <img class="center" src="assets/img/jordan2.png" alt="..." width="400" height="500" />
 
                                 
 
