--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
                              </p>
 
-                             <img class="center" src="assets/img/jordan2.png" alt="..." width="250" height="350" />
+                             <img class="center" src="assets/img/jordan2.png" alt="..."/>
 
                                 
 
