--- a/index.html
+++ b/index.html
@@ -278,6 +278,23 @@
 
                             </p>
 
+                            <br>
+
+                            <p class="text-white-50">
+                             The post below is another example of a post that was shared by a friend of my sister's in her chronic illness community.  
+
+                             </p>
+
+                             <br>
+
+                             </p>
+
+                             <img class="center" src="assets/img/jordan3.png" alt="..."/>
+
+                                
+
+                            </p>
+
 
 
                         </p>
