--- a/index.html
+++ b/index.html
@@ -295,6 +295,23 @@
 
                             </p>
 
+                            <br>
+
+                            <p class="text-white-50">
+                             This post as well  
+
+                             </p>
+
+                             <br>
+
+                             </p>
+
+                             <img class="center" src="assets/img/jordan4.png" alt="..."/>
+
+                                
+
+                            </p>
+
 
 
                         </p>
