--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                             <br>
 
                             <p class="text-white-50">
-                             This post as well  
+                             This post is also from a friend in the same community.  
 
                              </p>
 
@@ -307,6 +307,23 @@
                              </p>
 
                              <img class="center" src="assets/img/jordan4.png" alt="..."/>
+
+                                
+
+                            </p>
+
+                             <br>
+
+                            <p class="text-white-50">
+                             And this one too.  
+
+                             </p>
+
+                             <br>
+
+                             </p>
+
+                             <img class="center" src="assets/img/jordan5.png" alt="..."/>
 
                                 
 
