--- a/index.html
+++ b/index.html
@@ -331,6 +331,25 @@
 
 
 
+                             <br>
+
+                            <p class="text-white-50">
+                             This post also stood out to me as I looked back over my sister's facebook page. 
+
+                             </p>
+
+                             <br>
+
+                             </p>
+
+                             <img class="center" src="assets/img/jordan8.png" alt="..."/>
+
+                                
+
+                            </p>
+
+
+
                         </p>
             
                         <p class="text-white-50"> **
