--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Platformed Spaces + Archives</h2>
                         <p class="text-white-50">
-                            Sometimes I like knowing I can locate these pieces of information, these pseudo-archival artifiacts. I can access images that I don’t even own, that were uploaded by other family members or friends. 
+                            Sometimes I like knowing I can locate these pieces of information, these pseudo-archival artifacts. I can access images that I don’t even own, that were uploaded by other family members or friends. 
 
                         </p>
             
