--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                              <br>
                           
 
-                            <p class="text-white-50">
+                            <p class="text-white-50"><br>
                              And this one too.  
 
                              </p>
