--- a/index.html
+++ b/index.html
@@ -406,6 +406,8 @@
 
                         Connecting archives and platform affordances to cultural heritage, like Mukurtu
 
+                        Quote defining archival power
+
 
 
                     </p>
@@ -454,6 +456,8 @@
                         <h2 class="text-white mb-4">Memory and "Archival" Influence</h2>
                         <p class="text-white-50">
 
+
+                            
 
                             ***What counts as an archive? How do platforms and mediation of memory influence the "archive"? 
 
